--- a/views/rent_reservation_complete.erb
+++ b/views/rent_reservation_complete.erb
@@ -281,10 +281,10 @@
             <%% } %>
 
             <%% if (shopping_cart.time_from_cost > 0) { %>
-            <li>Suplemento hora entrega: <span class="pull-right"><%%=new Number(shopping_cart.extras_cost).toFixed(2)%>€</span></li>
+            <li>Suplemento hora entrega: <span class="pull-right"><%%=new Number(shopping_cart.time_from_cost).toFixed(2)%>€</span></li>
             <%% } %>
 
-            <%% if (shopping_cart.time_from_cost > 0) { %>
+            <%% if (shopping_cart.pickup_place_cost > 0) { %>
             <li>Suplemento lugar entrega: <span class="pull-right"><%%=new Number(shopping_cart.pickup_place_cost).toFixed(2)%>€</span></li>
             <%% } %>
 
@@ -292,9 +292,10 @@
             <li>Suplemento hora devolución: <span class="pull-right"><%%=new Number(shopping_cart.time_to_cost).toFixed(2)%>€</span></li>
             <%% } %>
 
-            <%% if (shopping_cart.time_from_cost > 0) { %>
+            <%% if (shopping_cart.return_place_cost > 0) { %>
             <li>Suplemento lugar devolución: <span class="pull-right"><%%=new Number(hopping_cart.return_place_cost).toFixed(2)%>€</span></li>
             <%% } %>
+
 
             <li>TOTAL: <span class="pull-right"><%%=new Number(shopping_cart.total_cost).toFixed(2)%>€</span></li>
           </ul>
