load reservation frontend

--- a/views/rent_reservation_complete.js.erb
+++ b/views/rent_reservation_complete.js.erb
@@ -1,5 +1,5 @@
 require(['jquery', 'YSDRemoteDataSource','YSDSelectSelector',
-        'ysdtemplate',
+        'ysdtemplate', 'jquery.formparams',
 	     'jquery.validate', 'jquery.ui', 'jquery.ui.datepicker-es', 
 	     'jquery.ui.datepicker.validation', 'datejs',
 	     'bootstrap', 'bootstrap.select'], 
