--- a/views/_booking_summary.erb
+++ b/views/_booking_summary.erb
@@ -26,7 +26,7 @@
             </div>
           </div>
           <div class="clearfix top-margin">
-            <div class="smaller_text less_contrast_text bottom-separator bottom-margin">Cliente</div>
+            <div class="smaller_text less_contrast_text bottom-separator bottom-margin"><%=t.booking.customer%></div>
             <div class="item_properties_attributes smaller_text">
               <div class="item_properties_attribute bottom-margin">
                 <span class="item_properties_attribute_name left_text">
