--- a/views/reserva_request.erb
+++ b/views/reserva_request.erb
@@ -1,10 +1,10 @@
  <div class="container_12">
    <div class="grid_8">
-   	 <div class="guiblock top-margin">
+   	 <div class="guiblock">
        <%= partial(:reserva, :locals => {:booking => booking, :message => booking_summary_message}) %>  
      </div>
    </div>
-   <div class="grid_4 top-margin">
+   <div class="grid_4">
      <%= partial(:booking_price, :locals => {:booking => booking}) %>  
    </div>
  </div>
