--- a/views/_booking_menu.erb
+++ b/views/_booking_menu.erb
@@ -16,7 +16,11 @@
 
 <div id="cssmenu" class="booking_menu admin_menu smaller_text all-space">
   <ul style="font-size: 0.92em">
-   <li class='<%if ['/admin/booking/catalog','/admin/booking/booking-categories','/admin/booking/booking-items','/admin/booking/booking-extras','/admin/booking/activities'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.products%></a>
+   <li class='<%if ['/admin/booking/catalog',
+                    '/admin/booking/booking-categories',
+                    '/admin/booking/booking-items',
+                    '/admin/booking/booking-extras',
+                    '/admin/booking/activities'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.products%></a>
       <ul>
         <% if booking_renting %>
         <li><a href='/admin/booking/booking-categories'><%=t.booking_console.categories%></a></li>
@@ -29,8 +33,16 @@
       </ul>    
    </li>    
    <% if booking_renting %>
-   <li class='<%if ['/admin/booking/new','/admin/booking/customers', '/admin/booking/bookings','/admin/booking/planning2','/admin/booking/monthly-occupation', '/admin/booking/reports/pickup-return','/admin/booking/reports/pending-confirmation',
-   '/admin/booking/reports/in-progress','/admin/booking/resources-occupation','/admin/booking/assign-stock'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.bookings%></a>
+   <li class='<%if ['/admin/booking/new',
+                    '/admin/booking/customers',
+                    '/admin/booking/bookings',
+                    '/admin/booking/planning2',
+                    '/admin/booking/monthly-occupation',
+                    '/admin/booking/reports/pickup-return',
+                    '/admin/booking/reports/pending-confirmation',
+                    '/admin/booking/reports/in-progress',
+                    '/admin/booking/resources-occupation',
+                    '/admin/booking/assign-stock'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.bookings%></a>
       <ul>
         <li><a href='/admin/booking/customers'><%=t.booking_console.new_booking%></a></li>
         <li><a href='/admin/booking/bookings'><%=t.booking_console.reservations%></a></li>
@@ -44,8 +56,14 @@
    </li>   
    <% end %>
    <% if booking_activities %>
-   <li class='<%if ['/admin/order/orders/new','/admin/order/orders','/admin/booking/reports/pending-confirmation-activities','/admin/booking/activities-occupation','/admin/booking/activities-schedule','/admin/booking/programmed-activities','/admin/booking/day-activities',
-   '/admin/booking/activity-detail'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.activity_bookings%></a>
+   <li class='<%if ['/admin/order/orders/new',
+                    '/admin/order/orders',
+                    '/admin/booking/reports/pending-confirmation-activities',
+                    '/admin/booking/activities-occupation',
+                    '/admin/booking/activities-schedule',
+                    '/admin/booking/programmed-activities',
+                    '/admin/booking/day-activities',
+                    '/admin/booking/activity-detail'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.activity_bookings%></a>
       <ul>
         <li><a href='/admin/order/orders/new'><%=t.booking_console.new_order%></a></li>   
         <li><a href='/admin/order/orders'><%=t.booking_console.orders%></a></li>
@@ -57,66 +75,98 @@
       </ul>
    </li>   
    <% end %>
+   <% if addon_crm %>
    <li class='<%if ['/admin/order/information-requests'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.crm%></a>
       <ul>
         <li><a href='/admin/order/information-requests'><%=t.booking_console.information_requests%></a></li>  
       </ul>
    </li>
-   <li class='<%if ['/admin/charges','/admin/booking/reports/charges','/admin/booking/product-billing','/admin/booking/extras-billing','/admin/booking/summary'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.finances%></a>
+   <% end %>
+   <li class='<%if ['/admin/charges',
+                    '/admin/booking/reports/charges',
+                    '/admin/booking/product-billing',
+                    '/admin/booking/extras-billing',
+                    '/admin/booking/summary'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.finances%></a>
       <ul>
         <li><a href='/admin/charges'><%=t.booking_console.receipts%></a></li>
         <li><a href="/admin/booking/reports/charges">Listado de cobros</a></li>
+        <% if addon_finances %>
         <li><a href='/admin/booking/product-billing'><%=t.booking_console.products_billing%></a></li>         
         <li><a href='/admin/booking/extras-billing'><%=t.booking_console.extras_billing%></a></li>
-        <li><a href='/admin/booking/summary'><%=t.booking_console.summary%></a></li>           
+        <li><a href='/admin/booking/summary'><%=t.booking_console.summary%></a></li>
+        <% end %>
       </ul>    
    </li>     
    <li class='<%if ['/admin/booking/reports/reservations',
-     '/admin/booking/reports/resource-reservations',
-     '/admin/booking/reports/customer-reservations',
-     '/admin/booking/reports/prereservations',
-     '/admin/booking/activities-summary',
-     '/admin/booking/reports/customers',
-     '/admin/booking/reports/stock'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.listing%></a>
+                    '/admin/booking/reports/resource-reservations',
+                    '/admin/booking/reports/customer-reservations',
+                    '/admin/booking/reports/prereservations',
+                    '/admin/booking/activities-summary',
+                    '/admin/booking/reports/customers',
+                    '/admin/booking/reports/stock'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.listing%></a>
      <ul>
+        <% if booking_renting %>
         <li><a href='/admin/booking/reports/stock'><%=t.booking_console.report_stock%></a></li>
         <li><a href='/admin/booking/reports/prereservations'><%=t.booking_console.report_prereservations%></a></li>    
         <li><a href='/admin/booking/reports/reservations'><%=t.booking_console.report_reservations%></a></li>
         <li><a href='/admin/booking/reports/resource-reservations'><%=t.booking_console.report_resource_reservations%></a></li>        
-        <li><a href='/admin/booking/reports/customer-reservations'><%=t.booking_console.report_customer_reservations%></a></li>        
-        <li><a href='/admin/booking/activities-summary'><%=t.booking_console.activities_report%></a></li>           
-        <li><a href='/admin/booking/reports/customers'><%=t.booking_console.report_customers%></a></li>   
-     </ul>     
-   </li>        
-   <li class='<%if ['/admin/booking/create-rates', '/admin/rates/adjust-prices'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.utils%></a>
+        <li><a href='/admin/booking/reports/customer-reservations'><%=t.booking_console.report_customer_reservations%></a></li>
+        <li><a href='/admin/booking/reports/customers'><%=t.booking_console.report_customers%></a></li>
+        <% end %>
+        <% if booking_activities %>
+        <li><a href='/admin/booking/activities-summary'><%=t.booking_console.activities_report%></a></li>
+        <% end %>
+     </ul>
+   </li>
+   <% if 1==0 %>
+   <li class='<%if ['/admin/booking/create-rates'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.utils%></a>
       <ul>
         <li><a href='/admin/booking/create-rates'><%=t.booking_console_configuration.create_rates%></a></li>           
-        <% if booking_renting %>       
-        <li><a href='/admin/rates/adjust-prices'><%=t.booking_console.adjust_prices%></a></li>
-        <% end %>   
-      </ul>    
-   </li>    
+      </ul>
+   </li>
+   <% end %>
+   <!-- Configuration menu item -->
    <li class='<%if ['/admin/booking/config/general',
-    '/admin/booking/config/templates','/admin/booking/booking-place-defs',
-    '/admin/calendar/timetables',
-    '/admin/rates/seasons','/admin/booking/booking-places',
-    '/admin/rates/season-defs','/admin/rates/factor-defs',
-    '/admin/rates/promotion-codes','/admin'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.configuration%></a>
+                    '/admin/booking/config/templates',
+                    '/admin/booking/booking-place-defs',
+                    '/admin/booking/booking-places',
+                    '/admin/calendar/timetables',
+                    '/admin/rates/season-defs',
+                    '/admin/rates/seasons',
+                    '/admin/rates/factor-defs',
+                    '/admin/rates/factors',
+                    '/admin/rates/adjust-prices',
+                    '/admin/rates/promotion-codes',
+                    '/admin/rates/discounts',
+                    '/admin'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.configuration%></a>
       <ul>
         <li><a href='/admin/booking/config/general'><%=t.booking_console_configuration.general_configuration%></a></li>
         <li><a href='/admin/booking/config/templates'><%=t.booking_console_configuration.templates%></a></li>
-        <li class='<%if ['/admin/booking/booking-place-defs','/admin/calendar/timetables'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.pickup_return%></a>
+        <li class='<%if ['/admin/booking/booking-place-defs',
+                         '/admin/booking/booking-places',
+                         '/admin/calendar/timetables'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.pickup_return%></a>
           <ul>
              <li><a href='/admin/booking/booking-place-defs'><%=t.booking_console.places%></a></li>
              <li><a href='/admin/calendar/timetables'><%=t.booking_console.timetables%></a></li>
           </ul>
         </li>      
-        <li class='<%if ['/admin/rates/season-defs','/admin/rates/factor-defs','/admin/rates/promotion-codes'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.rates%></a>
+        <li class='<%if ['/admin/rates/season-defs',
+                         '/admin/rates/seasons',
+                         '/admin/rates/factor-defs',
+                         '/admin/rates/factors',
+                         '/admin/rates/adjust-prices',
+                         '/admin/rates/promotion-codes',
+                         '/admin/rates/discounts'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.rates%></a>
           <ul>
             <li><a href='/admin/rates/season-defs'><%=t.rates_console.seasons%></a></li>
             <li><a href='/admin/rates/factor-defs'><%=t.rates_console.factors%></a></li>
+            <% if addon_offer_promotion_code %>
             <li><a href='/admin/rates/promotion-codes'><%=t.rates_console.promotion_codes%></a></li>     
-            <li><a href='/admin/rates/discounts'><%=t.rates_console.discounts%></a></li>                   
+            <li><a href='/admin/rates/discounts'><%=t.rates_console.discounts%></a></li>
+            <% end %>
+            <% if addon_massive_price_adjust %>
+                <li><a href='/admin/rates/adjust-prices'><%=t.booking_console.adjust_prices%></a></li>
+            <% end %>
           </ul>    
         </li> 
         <li><a href='/admin'><%=t.booking_console_configuration.admin%></a></li>                          
@@ -125,7 +175,6 @@
             
   </ul>
 </div>
-
 
 
 <script>
